<resources>
    <string name="app_name">SmartPesa SmartPOS</string>
    <string name="app_url" translatable="false">dev.smartpesa.com</string>
    <string name="version_endpoint" translatable="false">http://%1$s/version.txt</string>
    <string name="title_merchant_info">Merchant Info</string>
    <string name="title_history">History</string>
    <string name="title_payment">Sale</string>
    <string name="title_inquiry">Balance Inquiry</string>
    <string name="title_withdrawal">Cash-Out</string>
    <string name="title_services">Bill Payment</string>
    <string name="title_settings">Devices</string>
    <string name="title_about">Support</string>
    <string name="title_logout">Logout</string>
    <string name="title_login">Login</string>
    <string name="title_activity_about_us">Support</string>
    <string name="title_activity_forgot">Forgot IDs</string>
    <string name="title_operators">Staff</string>
    <string name="title_refund">Refund</string>
    <string name="title_cashback">Cashback</string>
    <string name="title_transfer_funds">Transfer Funds</string>
    <string name="title_activity_payment_progress">Payment Progress</string>
    <string name="title_reversal">Reversal</string>
    <string name="forgot_header_text">Can\'t Login? It\'s ok, it happens,</string>
    <string name="forgot_merchant_id_text">Please contact your account manager.</string>
    <string name="forgot_operator_text">Please contact your account manager.</string>
    <string name="forgot_pin_request_text">Enter your staff ID to receive your new PIN on your registered mobile number</string>
    <string name="enter_valid_id">Please enter valid Merchant Id and staff code</string>
    <string name="pin_success">PIN requested successfully</string>
    <string name="pin_request_inprogress">Please wait PIN request in progress</string>
    <string name="forgot_merchant">Forgot Merchant ID</string>
    <string name="forgot_operator">Forgot staff ID?</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string-array name="account_array">
        <item>Default account</item>
        <item>Savings account</item>
        <item>Current account</item>
        <item>Credit card</item>
    </string-array>
    <string-array name="installment_array">
        <item>Straight</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>
    <string-array name="salutation_array">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
    </string-array>
    <string name="about_copyright">\u00a9 Copyright Transaction Technologies Pte.Ltd. 2014-2016. SmartPesa is a trademark of Transaction Technologies Pte.Ltd. This application has been designed by SmartPesa, a global leader in mobile payment solutions, and is provided under license. All rights are reserved. </string>
    <string name="up_to_date">SmartPesa is up to date</string>
    <string name="title_activity_history_viewer">History Viewer</string>
    <string name="update">UPDATE</string>
    <string name="customer_support">Facing difficulties? Live chat with our support team now!</string>
    <string name="customer_support_number">555-1234</string>
    <string name="licensing_info"><u>Licensing info</u></string>
    <string name="privacy_policy">EULA/Privacy Policy</string>
    <string name="send_log">Send Log</string>
    <string name="app_version">App Version: %1$s</string>
    <string name="server_version">Server Version: %1$s</string>
    <string name="sdk_version">SDK Version: %1$s</string>
    <string name="sending_log">Sending log</string>
    <string name="log_sent">Log sent successfully</string>
    <string name="error_sending_log">Error sending Log, please try again</string>
    <string name="merchant_code">Merchant Code</string>
    <string name="login_title">Login</string>
    <string name="forgot_id">Forgot IDs ?</string>
    <string name="operator_code">staff Code</string>
    <string name="operator_pin">staff PIN</string>
    <string name="enter_merchant_id">Please enter the Merchant ID</string>
    <string name="enter_operator_code">Please enter the staff Code</string>
    <string name="enter_login_pin">Please enter the Login PIN</string>
    <string name="operator_name">Staff Name</string>
    <string name="enter_operator_name">Enter staff name</string>
    <string name="enter_op_code">Enter staff code</string>
    <string name="title_notification">Notifications</string>
    <string name="notification_phone">Notification Phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="notification_email">Notification Email</string>
    <string name="enter_email">Enter email address</string>
    <string name="title_permissions">Permissions</string>
    <string name="view_all_history">View all history</string>
    <string name="manage_operators">Manage staff</string>
    <string name="print_receipt">Print receipt</string>
    <string name="save">Save</string>
    <string name="title_edit_operator">Edit staff</string>
    <string name="adding_operator">Adding staff</string>
    <string name="please_wait">Please wait...</string>
    <string name="operator_added">Staff added successfully</string>
    <string name="updating_operator">Updating staff</string>
    <string name="operator_updated">Staff updated successfully</string>
    <string name="update_app">Please update the app to continue</string>
    <string name="cancel">CANCEL</string>
    <string name="server_error">Error Connecting to Server, try again later</string>
    <string name="ok">Ok</string>
    <string name="mandatory_update">Mandatory Upgrade</string>
    <string name="optional_upgrade">Optional Upgrade</string>
    <string name="device_name">Name : %1$s</string>
    <string name="device_hardware">Hardware: %1$s</string>
    <string name="device_firmware">Firmware: %1$s</string>
    <string name="device_last_used">Last used: %1$s</string>
    <string name="processing_payment">Processing Payment…</string>
    <string name="device_not_found">Bluetooth device not found</string>
    <string name="bluetooth_failed">Bluetooth connection failed, try again</string>
    <string name="title_signature">Signature</string>
    <string name="bitmap_null">Bitmap image is null</string>
    <string name="approved">Approved</string>
    <string name="sending_receipt">Sending Receipt, please wait..</string>
    <string name="sending_success">Sending success</string>
    <string name="enter_valid_number">Please enter a valid number and try again</string>
    <string name="enter_valid_email">Please enter a valid email ID and try again</string>
    <string name="select_one_option">Please check atleast one option</string>
    <string name="amount">AMOUNT</string>
    <string name="card_holder">CARD HOLDER</string>
    <string name="expiry">EXPIRY</string>
    <string name="date_time">DATE/TIME</string>
    <string name="method">METHOD</string>
    <string name="transaction_type">TRANSACTION TYPE</string>
    <string name="verification">VERIFICATION</string>
    <string name="signature">SIGNATURE</string>
    <string name="transaction_reference">TRANSACTION REF</string>
    <string name="details">DETAILS</string>
    <string name="transaction_details">TRANSACTION DETAILS</string>
    <string name="operator_name_caps">STAFF NAME</string>
    <string name="card_name">CARD NAME</string>
    <string name="aid">AID</string>
    <string name="retrieval_reference_number">RETRIEVAL REFERENCE NUMBER</string>
    <string name="tc_hash">TC HASH</string>
    <string name="from_account">FROM ACCOUNT</string>
    <string name="to_account">TO ACCOUNT</string>
    <string name="reversed">REVERSED</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="sms">SMS</string>
    <string name="email">EMAIL</string>
    <string name="send">SEND</string>
    <string name="manual_reverse">MANUAL REVERSE</string>
    <string name="print">PRINT</string>
    <string name="true_label">TRUE</string>
    <string name="send_history">Send History</string>
    <string name="from_and_to_date">Please select a from date and to date</string>
    <string name="history_sent">History sent successfully</string>
    <string name="select_valid_date">Please select a valid date</string>
    <string name="history_please_wait">Please wait, history is being sent</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="email_id">Email ID</string>
    <string name="please_sign_below">Please sign below...</string>
    <string name="clear">Clear</string>
    <string name="more_title">More</string>
    <string name="account_type">Account Type</string>
    <string name="invoice_info">Invoice Info</string>
    <string name="enter_description">Enter description</string>
    <string name="done">Done</string>
    <string name="transaction_successful">Transaction\nSuccessful</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="reference_number">REFERENCE NO</string>
    <string name="receipt">RECEIPT</string>
    <string name="help">HELP</string>
    <string name="inquiry_failed">Inquiry\nFailed</string>
    <string name="transaction_failed">Transaction\nFailed</string>
    <string name="try_again">Try Again</string>
    <string name="inquiry_success">Inquiry\nSuccessful</string>
    <string name="continue_label">CONTINUE</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="history"> History </string>
    <string name="statistics">Statistics</string>
    <string name="currency">Currency: %1$s</string>
    <string name="merchant_code_label">Code: %1$s</string>
    <string name="email_label">Email: %1$s</string>
    <string name="phone_label">Phone: %1$s</string>
    <string name="region_label">Region: %1$s</string>
    <string name="merchant_info">Merchant Info</string>
    <string name="address">Address:</string>
    <string name="permissions">Permissions</string>
    <string name="operator_name_label">Name: %1$s</string>
    <string name="operator_code_label">Code: %1$s</string>
    <string name="operator_id_label">Staff Id: %1$s</string>
    <string name="category">Category</string>
    <string name="billing_organisation">Billing Organisation</string>
    <string name="subscriber_number">Subscriber number</string>
    <string name="service_please_wait">Please wait</string>
    <string name="choose_billing_organisation">Choose a billing organisation</string>
    <string name="choose_category">Please choose a category</string>
    <string name="enter_subscriber_number">Please enter a Subscriber number</string>
    <string name="choose_category_first">Please choose a category first</string>
    <string name="destination_bank">Destination Bank</string>
    <string name="from_account_type">From Account Type</string>
    <string name="to_account_type">To Account type</string>
    <string name="select_bank">Please select a bank</string>
    <string name="all_time">All Time</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="internet_not_connected">No Internet Connection. Please check your connection settings and try again.</string>
    <string name="title_activity_advanced_settings">Advanced Settings</string>
    <string name="request_new_pin">Request new PIN</string>
    <string name="print_journal">Print Journal</string>
    <string name="operator_active">Staff Active</string>
    <string name="include_all_transactions">Include transactions of all staff</string>
    <string name="confirm_new_pin">CONFIRM PIN</string>
    <string name="change_pin">CHANGE PIN</string>
    <string name="old_pin">OLD PIN</string>
    <string name="new_pin">NEW PIN</string>
</resources>