<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/old_pin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/oldPinEt"
            android:lines="1"
            android:hint="Enter old PIN"
            android:maxLines="1"
            android:inputType="numberPassword"
            android:maxLength="8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/new_pin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPinEt"
            android:lines="1"
            android:hint="Enter new PIN"
            android:maxLines="1"
            android:inputType="numberPassword"
            android:maxLength="8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/confirm_new_pin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmNewPinEt"
            android:lines="1"
            android:hint="Enter new PIN again"
            android:maxLines="1"
            android:inputType="numberPassword"
            android:maxLength="8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/primary_button"
                android:textColor="@color/md_white_1000"
                android:id="@+id/cancelBtn"
                android:text="@string/cancel"
                android:layout_marginRight="2dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/primary_button"
                android:textColor="@color/md_white_1000"
                android:id="@+id/changePinBtn"
                android:text="@string/change_pin"
                android:layout_marginLeft="2dp" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>