<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OperatorEditActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/operatorInititalTV"
                    style="@style/SmartPesa.Display1.Inverse"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/ic_blue_circle"
                    android:gravity="center"
                    tools:text="A" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/operatorInititalTV"
                    android:layout_toEndOf="@+id/operatorInititalTV"
                    android:layout_toRightOf="@+id/operatorInititalTV"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/operatorNameET"
                            style="@style/SmartPesa.Subhead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/operatorNameLabelTV"
                            android:hint="@string/enter_operator_name"
                            android:inputType="textPersonName" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/operatorCodeET"
                            style="@style/SmartPesa.Subhead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/operatorCodeLabelTV"
                            android:ems="10"
                            android:hint="@string/enter_op_code"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/card_bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/SmartPesa.Subhead.Inverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_send_white_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/title_notification" />

                <android.support.design.widget.TextInputLayout
                    style="@style/SmartPesa.Body1.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/operatorPhoneET"
                        style="@style/SmartPesa.Body1.Inverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/notification_phone"
                        android:inputType="phone" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/SmartPesa.Body1.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/operatorMailET"
                        style="@style/SmartPesa.Body1.Inverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/notification_email"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/card_bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/SmartPesa.Subhead.Inverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_done_white_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/title_permissions" />

                <CheckBox
                    android:id="@+id/operatorHistoryCB"
                    style="@style/SmartPesa.Body1.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/view_all_history" />

                <CheckBox
                    android:id="@+id/operatorManageCB"
                    style="@style/SmartPesa.Body1.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/manage_operators" />

                <CheckBox
                    android:id="@+id/operatorPrintCB"
                    style="@style/SmartPesa.Body1.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/print_receipt" />

                <CheckBox
                    android:id="@+id/operatorActiveCB"
                    style="@style/SmartPesa.Body1.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/operator_active" />
            </LinearLayout>

            <Button
                android:id="@+id/operatorSaveBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/primary_button"
                android:text="@string/save"
                android:textColor="@drawable/text_general" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>